<resources>
    <string name="app_name">Btrack</string>
    <!-- login activity -->
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_conf">Re-enter Password</string>
    <string name="recover_account">Recover</string>

    <string name="action_logout">Logout</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_blank">BlankActivity</string>
    <string name="title_activity_debt">DebtActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Fragment_Title_2">debtors</string>
    <string name="Fragment_Title_1">Transactions</string>
    <string name="empty_debtors_message">Empty Debtors List</string>
    <string name="empty_transactions_message">Empty Transaction List</string>
    <string name="title_activity_edit_transaction_activity">EditTransactionActivity</string>
    <string name="transaction_amount_label">AMOUNT</string>
    <string name="transaction_recipient_label">RECIPIENT</string>
    <string name="transaction_recipient_hint">Enter the recipient of transaction</string>
    <string name="transaction_description_label">DESCRIPTION</string>
    <string name="transaction_description_hint">Enter brief description of transaction</string>
    <string name="transaction_update_button_text">SAVE</string>
    <string name="date_picker_title">Date</string>
    <string name="action_delete">Delete Mode</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="debtor_name_hint">Enter name</string>
    <string name="edit_debtor_dialog_title">Edit %1$s</string>
    <string name="debtor_name_exist_message">Name Already Exist</string>
    <string name="transaction_description_keywords_hint">Enter a key phase of description</string>
    <string name="transaction_filter_apply_button_text">Apply</string>
    <string name="transaction_filter_date_hint">DD/MM/YYYY</string>
    <string name="transaction_filter_dialog_title">Transaction Filter</string>
    <string name="transaction_summary_dialog_title">Monthly Summary</string>
    <string name="apply">Apply</string>
    <string name="transaction_filter_from_date_label">FROM</string>
    <string name="transaction_filter_to_date_label">TO</string>
    <string name="transaction_amount_from_hint">Enter amount from</string>
    <string name="transaction_amount_to_hint">Enter amount to</string>
    <string name="transaction_amount_hint">Enter the amount of transaction</string>
    <string name="debtor_search_hint">Enter search name</string>
    <string name="empty_debts_message">Empty Debt List</string>
    <string name="title_activity_edit_debt">EditDebtActivity</string>
    <string name="debt_amount_hint">Enter the amount</string>
    <string name="debt_description_hint">Enter brief description</string>
    <string name="positive_green">#31B404</string>
    <string name="negative_red">#DF0101</string>
    <string name="debt_balance_label">Balance:</string>
    <string name="debt_deadline_label">Deadline:</string>
    <string name="transaction_category_label">Category</string>
    <string name="transaction_priority_label">Priority</string>
    <string name="title_activity_summary_category">SummaryCategoryActivity</string>
    <string name="title_activity_summary_priority">SummaryPriorityActivity</string>
    <string name="transaction_summary_category_view_label">Category View</string>
    <string name="transaction_summary_priority_view_label">Priority View</string>
    <string name="action_change_password">Change Password</string>
    <string name="title_activity_change_password">Change Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_new_password_conf">Re-enter New Password</string>
    <string name="SummaryCategoryActivity_title">Category Spending Summary</string>
    <string name="SummaryPriorityActivity_title">Priority Spending Summary</string>
    <string name="TransactionFragment_all_transaction_title">All Transactions</string>
    <string name="DebtorFragment_all_debtor_title">All Debtors</string>
    <string name="TransactionFragment_filtered_transaction_title">Filtered Transactions</string>
    <string name="title_activity_set_up_limit">Set Up Spending Limit</string>
    <string name="hint_spending_limit">Limit Amount</string>
    <string name="back_button">BACK</string>

    <string name="error_network_title">oops, Sorry</string>
    <string name="error_network_message">you are not connected to the internet</string>
</resources>
