<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/activity_standard_1_margin"
        android:layout_marginRight="@dimen/activity_standard_1_margin"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_standard_1_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transaction_amount_label"
                style="?android:listSeparatorTextViewStyle"
                />
            <EditText android:id="@+id/transaction_amount_EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberSigned|numberDecimal"
                android:ems="10"
                android:hint="@string/transaction_amount_hint"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_standard_1_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transaction_recipient_label"
                style="?android:listSeparatorTextViewStyle"
                />
            <EditText android:id="@+id/transaction_recipient_EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/transaction_recipient_hint"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_standard_1_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transaction_description_label"
                style="?android:listSeparatorTextViewStyle"
                />
            <EditText android:id="@+id/transaction_description_EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/transaction_description_hint"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_standard_1_margin"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="50"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/transaction_category_label"/>
                <Spinner
                    android:id="@+id/transaction_category_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    </Spinner>

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="50"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/transaction_priority_label"/>
                <Spinner
                    android:id="@+id/transaction_priority_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </Spinner>
            </LinearLayout>

        </LinearLayout>
        <Button android:id="@+id/transaction_date_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_standard_1_margin"
            />


        <Button
            style="@style/Button"
            android:id="@+id/transaction_update_button"
            android:layout_margin="@dimen/activity_standard_1_margin"
            android:text="@string/transaction_update_button_text"/>

    </LinearLayout>

</ScrollView>